[package]
name = "poem-github-webhook"
version = "0.1.0"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
poem = "1.3.54"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
