[package]
name = "poem-github-webhook"
version = "0.1.0"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

[dependencies]
anyhow = "1.0.69"
hex = "0.4.3"
hmac = "0.12.1"
octocrab = "0.18.1"
poem = "1.3.54"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
