[package]
name = "poem-github-webhook"
version = "0.1.0"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

[dependencies]
anyhow = "1.0.75"
hex = "0.4.3"
hmac = "0.12.1"
octocrab = "0.32.0"
poem = "1.3.58"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
